# sample-agentic-value-accelerator

./: .dockerignore  .env.example  .gitignore  LICENSE  LOCAL_DEVELOPMENT.md  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  STANDALONE_USE_CASE.md  package-lock.json
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.kiro/specs/cevo-theme-kyc-banking/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/deployment-strategy/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: architecture-and-deployment.md  cevo-branding-light-mode.md  project-overview.md  standalone-use-case-development.md
applications/: README.md
applications/app_factory/: README.md  __init__.py  builder.py  console.py  deploy.sh  hooks.py  paths.py
applications/app_factory/prompts/: __init__.py  agent_builder.py  data_builder.py  docs_builder.py  infra_builder.py  orchestrator.py  ui_builder.py  validator.py
applications/app_factory/scripts/: publish_to_registry.py
applications/app_factory/ui-template/: index.html  package.json
applications/fsi_foundry/: README.md
applications/fsi_foundry/data/: README.md
applications/reference_implementations/: README.md
applications/reference_implementations/agent-safety/: README.md  SIGNALS_CONTRACT.md  deploy.sh  destroy-all.sh  template.json
applications/reference_implementations/case-management/: README.md  cleanup.sh  deploy.sh  load_sample_data.sh  template.json
applications/reference_implementations/case-management/agentcore_sars/app/SARAgent/: main.py  pyproject.toml
applications/reference_implementations/case-management/agentcore_sars/app/SARAgent/model/: load.py
applications/reference_implementations/market-surveillance/: .gitignore  Makefile  README.md  deploy.sh  template.json
applications/reference_implementations/shopping-concierge-agent/: README.md  deploy.sh  deployment-config.json  destroy.sh  package-lock.json  package.json  template.json
docs/: CUSTOMER_SUPPORT.md  FRAUD_DETECTION.md  KYC_BANKING.md  MARKET_SURVEILLANCE.md  TRADING_ASSISTANT.md
plan/: UseCaseGuidance.md
platform/: README.md
platform/control_plane/aaas/: frontier_agents.json
platform/control_plane/backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  requirements.txt  run_dev.sh
platform/control_plane/frontend/: .env.example  .env.production.example  .gitignore  homepage-redesign-prompt.md  index.html  package-lock.json  package.json
platform/control_plane/infrastructure/: .env.example  README.md  deploy-full.sh  deploy.sh  destroy.sh  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  tfplan-cfn  tfplan-iam  tfplan-slr  tfplan-xray  variables.tf
platform/control_plane/service_approval/: .dockerignore  Dockerfile
platform/control_plane/service_approval_runner/: Dockerfile  README.md  entrypoint.py  requirements.txt  sync-plugin.sh
platform/control_plane/templates/agent-scaffold-langgraph/: .env.example  README.md  pyproject.toml  template.json
platform/control_plane/templates/agent-scaffold-langgraph/src/: config.py  main.py
platform/control_plane/templates/agent-test-harness/: README.md  pyproject.toml  template.json
platform/control_plane/templates/agent-test-harness/src/: __init__.py  llm_judge.py  strands_evaluation.py
platform/control_plane/templates/event-driven-agent/: .env.example  README.md  pyproject.toml  template.json
platform/control_plane/templates/event-driven-agent/iac/terraform/: iam.tf  main.tf  runtime.tf  variables.tf
platform/control_plane/templates/event-driven-agent/src/langgraph/: config.py  main.py
platform/control_plane/templates/event-driven-agent/src/strands/: main.py
platform/control_plane/templates/human-in-the-loop/: README.md  pyproject.toml  template.json
platform/control_plane/templates/human-in-the-loop/src/: __init__.py  langgraph_hil.py  strands_hil.py
platform/control_plane/templates/multi-agent-kit/: README.md  pyproject.toml  template.json
platform/control_plane/templates/multi-agent-kit/src/: __init__.py  langgraph_supervisor.py  strands_agents_as_tools.py  strands_swarm.py
platform/control_plane/templates/research-report-generator/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  template.json
platform/control_plane/templates/research-report-generator/iac/terraform/: iam.tf  main.tf  runtime.tf  terraform.tfvars.example  variables.tf
platform/control_plane/templates/research-report-generator/src/langgraph/: config.py  main.py
platform/control_plane/templates/research-report-generator/src/strands/: config.py  main.py
platform/control_plane/templates/structured-output/: README.md  pyproject.toml  template.json
platform/control_plane/templates/structured-output/src/: __init__.py  langgraph_structured_output.py  strands_structured_output.py
platform/control_plane/templates/supervisor-specialists/: README.md  pyproject.toml  template.json
platform/control_plane/templates/supervisor-specialists/iac/terraform/: main.tf  outputs.tf  runtime.tf  terraform.tfvars.example  variables.tf
platform/control_plane/templates/supervisor-specialists/src/langgraph/: config.py  main.py
platform/control_plane/templates/supervisor-specialists/src/strands/: config.py  main.py
(+2463 files in other folders)
