[project]
name = "agent-test-harness"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0,<2.0",
    "pydantic>=2.10.0,<3.0",
]

[project.optional-dependencies]
strands = [
    "strands-agents>=1.38.0,<2.0",
    "strands-agents-evals>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
