[project]
name = "research-report-generator"
version = "1.0.0"
description = "RAG agent with Bedrock Knowledge Base retrieval, citations, and report generation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0,<3.0",
    "boto3>=1.35.0,<2.0",
    "bedrock-agentcore>=1.9.0,<2.0",
]

[project.optional-dependencies]
strands = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.35.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
