[project]
name = "structured-output"
version = "1.0.0"
description = "Structured output patterns for Strands and LangGraph using Pydantic models"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.10.0,<3.0"]

[project.optional-dependencies]
strands = ["strands-agents[otel]>=1.38.0,<2.0"]
langgraph = ["langchain-aws>=0.2.0,<1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
