[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SARAgent"
version = "0.1.0"
description = "SAR Reporting Agent for FinCEN filing — Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
    "mcp>=1.28.1",
    "strands-agents >= 1.13.0",
    "boto3 >= 1.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
